# clicks_and_cookies

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .gitignore  README.md  pyproject.toml
backend/taza/: db.sqlite3  package-lock.json
backend/taza/clicks/: serializers.py  views.py
backend/taza/clicks/migrations/: 0001_initial.py  0002_clicks_component.py
backend/taza/linkinbio/: serializers.py
backend/taza/linkinbio/migrations/: 0001_initial.py
backend/taza/linkinbio/templates/linkinbio/: index.html
backend/taza/taza/: asgi.py  settings.py  wsgi.py
frontend/: package.json
frontend/src/: App.css  App.js
taza/: db.sqlite3  manage.py  package-lock.json  package.json
taza/clicks/: admin.py  apps.py  models.py  serializers.py  views.py
taza/clicks/migrations/: 0001_initial.py  0002_clicks_component.py
taza/frontend/: package-lock.json  package.json
taza/frontend/src/: App.css  App.js
taza/linkinbio/: admin.py  apps.py  models.py  serializers.py  views.py
taza/linkinbio/migrations/: 0001_initial.py
taza/linkinbio/templates/linkinbio/: index.html
taza/taza/: asgi.py  settings.py  urls.py  wsgi.py
